## Discover dependencies

CONFIGURE_FILE( "procHunter.sh.in" "procHunter.sh" )
CONFIGURE_FILE( "catjob.in" "catjob" )

INSTALL(FILES catjob.py procFinder.py DESTINATION analysis
    PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/catjob ${CMAKE_CURRENT_BINARY_DIR}/procHunter.sh DESTINATION analysis
    PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL(CODE "execute_process(COMMAND setup_procmon_analysis.sh ${CMAKE_INSTALL_PREFIX}/python)")
