## Discover dependencies

CONFIGURE_FILE( "procmonRead.in" "procmonRead" @ONLY )

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/procmonRead DESTINATION bin
            PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

ADD_SUBDIRECTORY( procmonManager )
ADD_SUBDIRECTORY( analysis )
